<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/fv_of_annuity_due"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/annuity_value"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/annuityValueFVAD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:hint="@string/enter_annuity_value"
            android:inputType="number"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/interest_rate"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/interestFVAD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:hint="@string/enter_your_interest_rate"
            android:inputType="none"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/year"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/yearFVAD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:hint="@string/enter_your_year"
            android:inputType="number"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/co"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/compoundingRateFVAD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:hint="@string/enter_your_compound_rate"
            android:inputType="number"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resultFVAD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        >

        <Button
            android:id="@+id/resultFVADbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F26A78"
            android:text="@string/click_here_to_see_annuity_result"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>