<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/pv_of_perpetual_annuity"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/annuity_value"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/annuityValuePerpetual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:hint="@string/enter_annuity_value"
            android:inputType="number"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:textColor="#ffffff"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/interest_rate"
            android:textSize="25sp" />

        <EditText
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:id="@+id/interestPerpetual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:hint="@string/enter_your_interest_rate"
            android:inputType="none"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:id="@+id/resultPerpetual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:textSize="25sp" />


    </LinearLayout>
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/resultPerpetualButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_see_annuity_result"
        android:textAllCaps="false"
        android:background="#F26A78"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="25sp"/>


</LinearLayout>